WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282159
Image copied from Notes and pasted in compose on gmail.com does not get attached
https://bugs.webkit.org/show_bug.cgi?id=282159
Summary
Image copied from Notes and pasted in compose on gmail.com does not get attached
Wenson Hsieh
Reported
2024-10-27 17:13:20 PDT
rdar://138111842
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2024-10-27 17:15:41 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35778
EWS
Comment 2
2024-10-28 10:28:51 PDT
Committed
285770@main
(73bbfdc992ca): <
https://commits.webkit.org/285770@main
> Reviewed commits have been landed. Closing PR #35778 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug